<resources>
<string name="cancel">Cancel</string>
<string name="reset">Reset</string>
<string name="done">Done</string>
<string name="hidesong">Do you really want to hide this song? Its playback time and cache will be wiped. This action is irreversible.</string>
<string name="new_playlist">New playlist</string>
<string name="start_radio">Start radio</string>
<string name="stop_radio">Stop radio</string>
<string name="equalizer">Equalizer</string>
<string name="stop_sleep_timer">Do you want to stop the sleep timer?</string>
<string name="set_sleep_timer">Set sleep timer</string>
<string name="add_to_playlist">Add to playlist</string>
<string name="go_to_album">Go to album</string>
<string name="remove_from_queue">Remove from queue</string>
<string name="remove_from_playlist">Remove from playlist</string>
<string name="hide">Hide</string>
<string name="hide_from_quick_picks">Hide from Quick Picks</string>
<string name="related_albums">Related albums</string>
<string name="similar_artists">Similar artists</string>
<string name="playlists_you_might_like">Playlists you might like</string>
<string name="forgotten_favorites">Forgotten favorites</string>
<string name="fresh_finds_old_favorites">Fresh finds, old favorites</string>
<string name="mixed_for_you">Mixed for you</string>
<string name="your_daily_discover">Your daily discover</string>
<string name="fresh_new_music">Fresh new music</string>
<string name="new_releases">New releases</string>
<string name="albums_for_you">Albums for you</string>
<string name="todays_biggest_hits">Today\'s biggest hits</string>
<string name="all_hits">All hits</string>
<string name="featured_playlists_for_you">Featured playlists for you</string>
<string name="trending_community_playlists">Trending community playlists</string>
<string name="from_the_community">From the community</string>
<string name="trending_songs_for_you">Trending songs for you</string>
<string name="cover_and_remixes">Cover and remixes</string>
<string name="trending_in_shorts">Trending in Shorts</string>
<string name="music_videos_for_you">Music videos for you</string>
<string name="top_music_videos">Top music videos</string>
<string name="live_performances">Live performances</string>
<string name="an_error_has_occurred">An error has occurred</string>
<string name="albums">Albums</string>
<string name="artists">Artists</string>
<string name="enter_the_playlist_name">Enter the playlist name</string>
<string name="playlists">Playlists</string>
<string name="favorites">Favorites</string>
<string name="quick_picks">Quick Picks</string>
<string name="lucky_shuffle">I\'m feeling lucky</string>
<string name="songs">Songs</string>
<string name="other_versions">Other versions</string>
<string name="album_no_alternative_version">This album doesn\'t have any alternative version</string>
<string name="enqueue">Enqueue</string>
<string name="shuffle">Shuffle</string>
<string name="view_all">View all</string>
<string name="from_wikipedia_cca">From Wikipedia under Creative Commons Attribution CC-BY-SA 3.0</string>
<string name="overview">Overview</string>
<string name="singles">Singles</string>
<string name="library">Library</string>
<string name="artist_no_release_album">This artist didn\'t release any album</string>
<string name="artist_no_release_single">This artist didn\'t release any single</string>
<string name="delete_playlist">Do you really want to delete this playlist?</string>
<string name="sync">Sync</string>
<string name="rename">Rename</string>
<string name="delete">Delete</string>
<string name="enter_the_lyrics">Enter the lyrics</string>
<string name="edit_lyrics">Edit lyrics</string>
<string name="search_lyrics_online">Search lyrics online</string>
<string name="fetch_lyrics_again">Fetch lyrics again</string>
<string name="id">Id</string>
<string name="itag">Itag</string>
<string name="bitrate">Bitrate</string>
<string name="size">Size</string>
<string name="cached">Cached</string>
<string name="loudness">Loudness</string>
<string name="clear">Clear</string>
<string name="error">An error has occurred.</string>
<string name="online">Online</string>
<string name="no_results_found">No results found. Please try a different query or category</string>
<string name="videos">Videos</string>
<string name="featured">Featured</string>
<string name="view_the_source_code">View the source code</string>
<string name="report_an_issue">Report an issue</string>
<string name="you_will_be_redirected_to_github">You will be redirected to GitHub</string>
<string name="request_a_feature_or_suggest_an_idea">Request a feature or suggest an idea</string>
<string name="theme">Theme</string>
<string name="theme_mode">Theme mode</string>
<string name="thumbnail_roundness">Thumbnail roundness</string>
<string name="use_system_font">Use system font</string>
<string name="use_font_by_the_system">Use the font applied by the system</string>
<string name="apply_font_padding">Apply font padding</string>
<string name="add_spacing_around_texts">Add spacing around texts</string>
<string name="lockscreen">LOCKSCREEN</string>
<string name="show_song_cover">Show song cover</string>
<string name="use_song_cover_on_lockscreen">Set currently playing song cover as lockscreen wallpaper</string>
<string name="cache">Cache</string>
<string name="cache_cleared">When the cache runs out of space, the resources that haven\'t been accessed for the longest time are cleared</string>
<string name="image_cache">IMAGE CACHE</string>
<string name="max_size">Max size</string>
<string name="database">Database</string>
<string name="reset_quick_picks">Reset Quick Picks</string>
<string name="quick_picks_are_cleared">Quick picks are cleared</string>
<string name="backup">BACKUP</string>
<string name="personal_preference">Personal preferences (i.e. the theme mode) and the cache are excluded.</string>
<string name="backup_1">Backup</string>
<string name="export_the_database">Export the database to the external storage</string>
<string name="restore">RESTORE</string>
<string name="restore_1">Restore</string>
<string name="import_the_database">Import the database from the external storage</string>
<string name="android_auto">ANDROID AUTO</string>
<string name="enable_unknown_sources">Remember to enable \"Unknown sources\" in the Developer Settings of Android Auto.</string>
<string name="android_auto_1">Android Auto</string>
<string name="enable_android_auto_support">Enable Android Auto support</string>
<string name="search_history">SEARCH HISTORY</string>
<string name="pause_search_history">Pause search history</string>
<string name="neither_save_new_searched_query">Neither save new searched queries nor show history</string>
<string name="clear_search_history">Clear search history</string>
<string name="history_is_empty">History is empty</string>
<string name="service_lifetime">Service lifetime</string>
<string name="battery_optimizations_applied">If battery optimizations are applied, the playback notification can suddenly disappear when paused.</string>
<string name="is_android12">Since Android 12, disabling battery optimizations is required for the \"Invisible service\" option to take effect.</string>
<string name="ignore_battery_optimizations">Ignore battery optimizations</string>
<string name="already_unrestricted">Already unrestricted</string>
<string name="disable_background_restrictions">Disable background restrictions</string>
<string name="invincible_service">Invincible service</string>
<string name="turning_off_battery_optimizations_is_not_enough">When turning off battery optimizations is not enough</string>
<string name="player">Player</string>
<string name="persistent_queue">Persistent player</string>
<string name="remember_queue_scroll_position">Remember queue scroll position</string>
<string name="remember_queue_scroll_position_description">Keep the scroll position when closing and reopening the player queue</string>
<string name="save_and_restore_playing_songs">Save and restore playing songs</string>
<string name="resume_playback">Resume playback</string>
<string name="when_device_is_connected">When a wired or bluetooth device is connected</string>
<string name="skip_silence">Skip silence</string>
<string name="skip_silent_parts_during_playback">Skip silent parts during playback</string>
<string name="loudness_normalization">Loudness normalization</string>
<string name="autoadjust_the_volume">Adjust the volume to a fixed level</string>
<string name="interact_with_the_system_equalizer">Interact with the system equalizer</string>
<string name="about">About</string>
<string name="more_of">More of</string>
<string name="sleep_timer">Sleep timer</string>
<string name="left">%1$s left</string>
<string name="confirm">Confirm</string>
<string name="show">Show</string>
<string name="unsynchronized_lyrics">unsynchronized lyrics</string>
<string name="synchronized_lyrics">synchronized lyrics</string>
<string name="karaoke_lyrics">karaoke lyrics</string>
<string name="auto_lyrics">auto lyrics</string>
<string name="current_lyrics_state">Current state: %1$s</string>
<string name="provided_by">Provided by</string>
<string name="delete_playback_events">Delete %1$s playback events</string>
<string name="existing_data_will_be_overwritten">Existing data will be overwritten. %1$s will automatically close itself after restoring the database.</string>
<string name="folder_cache">CACHE FOLDER</string>
<string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
<string name="cache_location_folder">Folder location</string>
<string name="custom_cache_from_android_10_may_not_be_available">Since Android 10, this feature may not be available</string>
<string name="reset_cache_location_folder">RESET CACHE FOLDER LOCATION</string>
<string name="used">" used"</string>
<string name="close_background_player">Close background player</string>
<string name="when_app_swipe_out_from_task_manager">When app swipe out from task manager</string>
<string name="opening_url">is loading...</string>
<string name="an_error_has_occurred_while_fetching_the_lyrics">An error has occurred while fetching the lyrics</string>
<string name="are_not_available_for_this_song">are not available for this song</string>
<string name="error_a_network_error_has_occurred">A network error has occurred</string>
<string name="error_couldn_t_find_a_playable_audio_format">Couldn\'t find a playable audio format</string>
<string name="error_the_original_video_source_of_this_song_has_been_deleted">The original video source of this song has been deleted</string>
<string name="error_this_song_cannot_be_played_due_to_server_restrictions">This song cannot be played due to server restrictions</string>
<string name="error_the_returned_video_id_doesn_t_match_the_requested_one">The returned video id doesn\'t match the requested one</string>
<string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
<string name="tips">For You</string>
<string name="is_min_list_time_for_tips_or_quick_pics">Minimum playback duration for a song to be suggested in Quick Picks</string>
<string name="min_listening_time">Min playback duration</string>
<string name="player_thumbnail_size">Thumbnail Size</string>
<string name="restarting_rimusic_is_required">Restarting is required</string>
<string name="small">Small</string>
<string name="medium">Medium</string>
<string name="big">Big</string>
<string name="none">None</string>
<string name="light">Small</string>
<string name="heavy">Large</string>
<string name="player_rotating_buttons">Rotating buttons</string>
<string name="album_art">Album art</string>
<string name="play_pause">Play / Pause</string>
<string name="not_playing">Not playing</string>
<string name="tap_to_play">Tap to play</string>
<string name="like">Like</string>
<string name="previous">Previous</string>
<string name="next">Next</string>
</resources>